--- a/client/app/templates/index.hbs
+++ b/client/app/templates/index.hbs
@@ -1,8 +1,6 @@
-<div class="bg-black">
-  <div class="bg-fixed bg-[url('/wp8041844.jpg')] bg-center bg-cover">
-    <div class="layover flex flex-col font-courier">
-      <Navbar />
-      <SearchMenu @categories={{this.model}} />
-    </div>
+<div class="bg-fixed bg-[url('/wp8041844.jpg')] bg-center bg-cover h-screen w-screen">
+  <div class="layover flex flex-col font-courier">
+    <Navbar />
+    <SearchMenu @categories={{this.model}} />
   </div>
 </div>
