--- a/client/app/templates/index.hbs
+++ b/client/app/templates/index.hbs
@@ -1,4 +1,4 @@
-<div class="background bg-fixed bg-center bg-cover w-screen">
+<div class="background bg-fixed bg-center bg-cover w-full bg-no-repeat min-h-screen">
   <div class="layover flex flex-col font-courier">
     <Navbar />
     <SearchMenu @categories={{this.model}} />
